[package]
name = "han"
version = "0.1.0"
edition = "2021"
description = "HAN port utilities"
license = "MIT"

[dependencies]
crc16 = "0.4.0"
serde = { version = "1.0.147", default-features = false, features = ["derive"], optional = true }
time = { version = "0.3.15", default-features = false, features = ["parsing", "macros"] }

[features]
serde = ["dep:serde", "time/serde", "time/serde-well-known"]
