[package]
name = "han"
version = "0.1.1"
edition = "2021"
description = "No-std implementation of the Swedish-Norwegian, P1-based smart power meter standard"
license = "MIT"
categories = ["parser-implementations", "no-std"]
keywords = [
  "serial",
  "uart",
  "p1",
  "han",
  "iot",
  "power",
  "swedish",
  "norwegian",
]

[dependencies]
crc16 = "0.4.0"
time = { version = "0.3.15", default-features = false, features = [
  "parsing",
  "macros",
] }
